Update the FFI related code for JEP434/JDK20
The changes update all FFI specific code in java & native
against the latest APIs specified in JDK20 to accommodate
the requirements in JEP434.

Note:
This is the part of implementation intended for
#16329

Signed-off-by: ChengJin01 <jincheng@ca.ibm.com>